--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Nepal"
   employer         : "Fusemachines Nepal"
   uri              : # URL
-  email            : "roshani@fusemachines.com"
+  email            : "rosneacharya@gmail.com"
 
   # Academic websites
 #  academia         : # URL
